All Commit